# Pynapse

./: README.md  main.py  pyproject.toml
brain/: __init__.py  camada.py  funcs_ativacao.py  funcs_custo.py  funcs_init_pesos.py  rede_neural.py
pynapse/: main.py
pynapse/brain/: __init__.py  camada.py  funcs_ativacao.py  funcs_custo.py  funcs_regularizacao.py  rede_neural.py
test/: test_camada.py
