[tool.poetry]
name = "pynapse"
version = "0.1.0"
description = ""
authors = ["João <oliveira.joaovtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
blue = "^0.9.1"


[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'


[tool.taskipy.tasks]
# lint = ''
format = 'isort . && blue .'
run = 'python .\pynapse\main.py'
# pre_test = 'task lint'
test = 'pytest -s -x --cov=pynapse -vv'
post_test = 'coverage html'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
